--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 <body>
   <!-- The code below uses a header tag. This is the black section on the page where the title of the page is displayed. -->
   <header>
-    <h1>Title of Webpage</h1>
+    <!--h1>Earth day</h1-->
+    <img src="https://www.nps.gov/subjects/npscelebrates/images/MicrosoftTeams-image_45.png">
   </header>
   <div class="section">
-    <h1>Section 1</h1>
+    <p>Earth Day is celebrated on April 22 in the United States and on either April 22 or the day the spring equinox occurs throughout the rest of the world.</p>
+    
     <!-- Add text, images, and links for section 1 below. -->
 
   </div>
   <hr> <!-- The hr tag creates that line you see between sections -->
   <div class="section">
-    <h1>Section 2</h1>
+    <p>Environmental activism during the 1960s inspired Wisconsin Sen. Gaylord Nelson to create a national celebration uniting the environmental movement.</p>
     <!-- Add text, images, and links for section 2 below. -->
 
   </div>
